--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,24 @@
 <resources>
     <string name="app_name">Covid Score</string>
     <string name="app_welcome">Welcome</string>
-    <string name="location_question">Please select a location</string>
+    <string name="location_entry_text">Please enter a location:</string>
     <string name="state">Select state</string>
     <string name="county">Select county</string>
+    <string name="submit_btn">Submit</string>
+
+
+    TODO: delete after database connection
+    <string-array name="states_array">
+        <item>Washington</item>
+    </string-array>
+    <string-array name="counties_array">
+        <item>King</item>
+        <item>Snohomish</item>
+        <item>Pierce</item>
+        <item>Kitsap</item>
+        <item>Chelan</item>
+        <item>Skagit</item>
+        <item>San Juan</item>
+    </string-array>
+    <string name="location_button">Select a Location</string>
 </resources>
