--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,28 @@
 <resources>
     <string name="app_name">Covid Score</string>
+    <string name="app_welcome">Welcome</string>
+    <string name="location_entry_text">Please enter a location:</string>
+    <string name="state">Select state</string>
+    <string name="county">Select county</string>
+    <string name="submit_btn">Submit</string>
+
+<!--TODO: delete after database connection-->
+    <string-array name="states_array">
+        <item>Washington</item>
+    </string-array>
+    <string-array name="counties_array">
+        <item>King</item>
+        <item>Snohomish</item>
+        <item>Pierce</item>
+        <item>Kitsap</item>
+        <item>Chelan</item>
+        <item>Skagit</item>
+        <item>San Juan</item>
+    </string-array>
+
+    <string name="current_location">Current Location:</string>
+    <string name="active_county">Active Cases in County:</string>
+    <string name="active_state">Active Cases in State:</string>
+    <string name="active_country">Active Cases in US:</string>
+
 </resources>
