--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,14 @@
     <string name="pick_state_county">Please pick a state and county</string>
     <string name="loading_data">Loading COVID data…</string>
     <string name="select_location">Select Location</string>
+    <string name="group">- %s</string>
+    <string name="risk">%.2f%%</string>
+
+    <string-array name="group_sizes">
+        <item>10</item>
+        <item>20</item>
+        <item>50</item>
+        <item>100</item>
+        <item>200</item>
+    </string-array>
 </resources>
