--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,6 @@
     <string name="active_country">Active Cases in US:</string>
     <string name="select_location">Select Location</string>
 
+    <string name="store_location">Store A Location</string>
+
 </resources>
