made cards uniform / pretty

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="populations">Populations</string>
     <string name="risk_assessment">Risk Assessment</string>
     <string name="group_size">Group Size</string>
-    <string name="risk_of_being_exposed_to_covid">Risk of being exposed to COVID</string>
+    <string name="risk_of_being_exposed_to_covid">Risk of COVID exposure</string>
 
     <string-array name="group_sizes">
         <item>10</item>
