--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,7 +22,18 @@
     <string name="risk_assessment">Risk Assessment</string>
     <string name="group_size">Group Size</string>
     <string name="risk_of_being_exposed_to_covid">Risk of COVID exposure</string>
-    <string name="aboutText">CovidScore calculates your risk of being exposed to COVID-19 within a U.S. county.\n\nRisk is determined by...</string>
+    <string name="aboutText">CovidScore calculates your risk of being exposed to COVID-19 within a
+        U.S. county.</string>
+    <string name="riskExplanationText">To calculate the risk of being exposed to COVID, we need
+        to start with the probability that any one person has COVID, which is a simple division of
+        active cases by total population.\n\nWe can interpret the complement of this probability to
+        be the probability that any one person doesn\'t have COVID.\n\nWe then multiply this by
+        itself for as many people as there are in the group, e.g. if the probability of 1 person not
+        having COVID is 0.5, then the probability of 2 people would be 0.5*0.5 = 0.25, for 3 people
+        it would be 0.5*0.5*0.5 = 0.125, and so on.\n\nThe resulting value can be interpreted as the
+        probability that nobody in the group has COVID.\n\nSo the complement of this can then be
+        interpreted as the probability that someone in the group has COVID, and this is the value
+        that we display to you.</string>
     <string name="aboutDataHeading">Data Sources</string>
     <string name="githubLabel">Check us out on GitHub</string>
     <string name="versionText">0.3.0</string>
@@ -38,8 +49,8 @@
     <string name="linkCensus">Link to U.S. Census Bureau</string>
     <string name="linkDisease">Link to Disease.sh\'s GitHub</string>
     <string name="no_internet">No Internet Connection Available</string>
-    <string name="aboutList">&#8226; State data from Worldometer\n&#8226; All other data from Johns Hokpkins &#160;&#160;University</string>
-    <string name="no_internet">No Internet Connection Available</string>
+    <string name="aboutList">&#8226; State data from Worldometer\n&#8226; All other data from Johns Hopkins &#160;&#160;University</string>
+    <string name="determineRiskHeadingText">Determining Risk</string>
 
     <string-array name="group_sizes">
         <item>10</item>
