--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,7 +6,7 @@
     <string name="county">Select county</string>
     <string name="submit_btn">Submit</string>
 
-    <string name="current_location">Current Location:</string>
+    <string name="current_location">Current Location:&#160;&#160;</string>
     <string name="active_county">Active Cases in County:</string>
     <string name="active_state">Active Cases in State:</string>
     <string name="active_country">Active Cases in US:</string>
