--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,7 +49,7 @@
     <string name="linkCensus">Link to U.S. Census Bureau</string>
     <string name="linkDisease">Link to Disease.sh\'s GitHub</string>
     <string name="no_internet">No Internet Connection Available</string>
-    <string name="aboutList">&#8226; State data from Worldometer\n&#8226; All other data from Johns Hopkins &#160;&#160;University</string>
+    <string name="aboutList">&#8226; State data from Worldometer\n&#8226; All other data from Johns Hopkins University</string>
     <string name="determineRiskHeadingText">Determining Risk</string>
 
     <string-array name="group_sizes">
