Updates About with new COVID-19 Resources section

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,6 +51,11 @@
     <string name="no_internet">No Internet Connection Available</string>
     <string name="aboutList">&#8226; State data from Worldometer\n&#8226; All other data from Johns Hopkins University</string>
     <string name="determineRiskHeadingText">Determining Risk</string>
+    <string name="learnMoreText">COVID-19 Resources</string>
+    <string name="gTechText">• Georgia Tech - COVID-19 Event Risk Assessment Planning Tool</string>
+    <string name="atlanticText">• The Atlantic - The COVID Tracking Project</string>
+    <string name="atlanticLink">Link to The Atlantic\'s COVID Tracking Project</string>
+    <string name="gTechLink">Link to Georgia Teach\'s COVID-19 Event Risk Assessment Planning Tool</string>
 
     <string-array name="group_sizes">
         <item>10</item>
